<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.ui_list_characters.CharactersListFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/bottom_sheet_white"
        android:layout_marginTop="20dp"
        android:layout_marginRight="17dp"
        android:layout_marginLeft="17dp"
        app:titleTextColor="@color/white"
        android:elevation="@dimen/card_elevation">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="110dp"
            app:queryHint="@string/search"
            app:iconifiedByDefault="false"
            android:textColorHint="@android:color/white"
            app:closeIcon="@drawable/ic_closed"
            app:searchIcon="@drawable/ic_search" />

        <ImageView
            android:id="@+id/fiter_button"
            android:layout_width="22dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_filter"
            android:layout_marginEnd="35dp"
            android:layout_gravity="end"
            android:contentDescription="@string/todo" />

        <ImageView
            android:id="@+id/fav_content"
            android:layout_width="22dp"
            android:layout_height="match_parent"
            android:src="@drawable/baseline_favorite_24"
            android:layout_marginEnd="20dp"
            android:layout_gravity="end"
            android:contentDescription="@string/todo" />

    </androidx.appcompat.widget.Toolbar>

    <ProgressBar
        android:id="@+id/progress"
        android:visibility="gone"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"/>

    <FrameLayout
        android:id="@+id/error_wrapper"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="230dp"
            android:layout_height="230dp"
            android:layout_gravity="center"
            android:layout_marginBottom="115dp"
            android:src="@drawable/icon_error"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/error_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textStyle="bold"
            tools:text="@string/error"/>

        <ImageButton
            android:id="@+id/retry_button"
            android:layout_marginTop="45dp"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:background="@drawable/button_retry"
            android:src="@drawable/ic_baseline_refresh_24"
            android:contentDescription="@string/todo" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/content_wrapper"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/characters_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="14dp"
            android:paddingRight="14dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/card_character" />
    </FrameLayout>


</LinearLayout>