<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/navy"
    app:cardElevation="@dimen/card_elevation"
    app:cardCornerRadius="@dimen/corners"
    android:layout_margin="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/navy"
        tools:context=".view.FullRickFragment"
        android:orientation="vertical">

        <TextView
            android:visibility="gone"
            android:id="@+id/error"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/title_2"/>

        <LinearLayout
            android:id="@+id/wrapper"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="400dp">

                <ImageView
                    android:id="@+id/main_images"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    tools:src="@tools:sample/avatars" />

                <ImageView
                    android:background="@drawable/two_gradient"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/card_margin"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/character_names"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="100dp"
                            android:textSize="@dimen/title_2"
                            android:textStyle="bold"
                            android:textColor="@color/white"
                            android:fontFamily="@font/poppins_semibold"
                            android:maxLines="2"
                            tools:text="@string/name" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:orientation="horizontal">

                            <View
                                android:id="@+id/indicator"
                                android:layout_width="9dp"
                                android:layout_height="9dp"
                                android:layout_gravity="center"
                                android:background="@drawable/circle_share" />

                            <TextView
                                android:id="@+id/character_status"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:textStyle="normal"
                                android:textColor="@color/white"
                                android:fontFamily="@font/poppins_regular"
                                tools:text="@tools:sample/cities"/>



                        </LinearLayout>

                        <TextView
                            android:id="@+id/character_location"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:textStyle="normal"
                            android:textColor="@color/white"
                            android:fontFamily="@font/poppins_regular"
                            tools:text="Location"/>

                    </LinearLayout>

                    <ImageButton
                        android:id="@+id/share_button"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_gravity="center|end"
                        android:layout_marginEnd="@dimen/card_margin"
                        android:background="@drawable/circle_share"
                        android:src="@drawable/ic_reply"/>

                </FrameLayout>

            </FrameLayout>

            <TextView
                android:text="@string/more_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins_semibold"
                android:layout_marginStart="@dimen/card_margin"
                android:layout_marginEnd="@dimen/card_margin"
                android:textStyle="bold"
                android:textSize="@dimen/title_1"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ProgressBar
                    android:id="@+id/progress_bar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/card_margin"
                    android:layout_gravity="center"/>

            <com.takehomechallenge.mohamadajihermansya.ui.ui_detail_characters.recyclerviews.RecyclerViewEpisodes
                android:id="@+id/episodes"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/detail_episodes" />

            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_text"
                android:layout_marginStart="@dimen/card_margin"
                android:layout_marginEnd="@dimen/card_margin"
                android:orientation="horizontal">

                <View
                    android:layout_width="220dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center|start"
                    android:layout_marginEnd="@dimen/card_margin"
                    android:background="@color/white"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="@dimen/card_margin"
                android:layout_marginEnd="@dimen/card_margin"
                android:layout_gravity="start"
                android:scrollbars = "horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/white"
                    android:textSize="@dimen/title_4"
                    android:fontFamily="@font/poppins_regular"
                    android:nestedScrollingEnabled="true"
                    android:text="@string/name_tag"/>
                <TextView
                    android:id="@+id/user_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/white"
                    android:layout_marginStart="10dp"
                    android:textSize="@dimen/title_4"
                    android:fontFamily="@font/poppins_regular"
                    android:nestedScrollingEnabled="true"
                    android:text="@string/name"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="@dimen/card_margin"
                android:layout_marginEnd="@dimen/card_margin"
                android:layout_gravity="start"
                android:scrollbars = "horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/white"
                    android:textSize="@dimen/title_4"
                    android:fontFamily="@font/poppins_regular"
                    android:nestedScrollingEnabled="true"
                    android:text="@string/species"/>
                <TextView
                    android:id="@+id/user_species"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/white"
                    android:textSize="@dimen/title_4"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/poppins_regular"
                    android:nestedScrollingEnabled="true"
                    android:text="@string/human"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="@dimen/card_margin"
                android:layout_marginEnd="@dimen/card_margin"
                android:layout_gravity="start"
                android:scrollbars = "horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/white"
                    android:textSize="@dimen/title_4"
                    android:fontFamily="@font/poppins_regular"
                    android:nestedScrollingEnabled="true"
                    android:text="@string/gender"/>
                <TextView
                    android:id="@+id/user_gender"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/white"
                    android:textSize="@dimen/title_4"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/poppins_regular"
                    android:nestedScrollingEnabled="true"
                    android:text="@string/human"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="@dimen/card_margin"
                android:layout_marginEnd="@dimen/card_margin"
                android:layout_gravity="start"
                android:scrollbars = "horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/white"
                    android:textSize="@dimen/title_4"
                    android:fontFamily="@font/poppins_regular"
                    android:nestedScrollingEnabled="true"
                    android:text="@string/origin"/>
                <TextView
                    android:id="@+id/user_origin"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/white"
                    android:textSize="@dimen/title_4"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/poppins_regular"
                    android:nestedScrollingEnabled="true"
                    android:text="@string/human"/>
            </LinearLayout>

            <TextView
                android:id="@+id/user_location"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/white"
                android:textSize="@dimen/title_4"
                android:layout_marginStart="@dimen/card_margin"
                android:layout_marginEnd="@dimen/card_margin"
                android:fontFamily="@font/poppins_regular"
                android:nestedScrollingEnabled="true"
                tools:text="Location"/>





        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>